[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ganha.tscn" type="PackedScene" id=3]
[ext_resource path="res://wallpaperfreeway.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://sons/tema.wav" type="AudioStream" id=6]
[ext_resource path="res://sons/ponto.wav" type="AudioStream" id=7]
[ext_resource path="res://sons/ganhou.wav" type="AudioStream" id=8]
[ext_resource path="res://Material freeway/PressStart2P-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0.92549, 0.117647, 0.117647, 1 )
font_data = ExtResource( 9 )

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="ganha" parent="." instance=ExtResource( 3 )]
position = Vector2( 638.66, 64 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 320, 696 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 944, 696 )

[node name="horacarrorapido" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="horacarrodevagar" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="placar1" type="Label" parent="."]
margin_left = 300.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.92549, 0.0627451, 0.0627451, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="placar2" type="Label" parent="."]
margin_left = 920.0
margin_top = 10.0
margin_right = 944.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.858824, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="resultado" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.866667, 0.105882, 0.105882, 1 )
custom_fonts/font = SubResource( 1 )

[node name="ponto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="ganhou" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="tema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Button" type="Button" parent="."]
margin_left = 496.0
margin_top = 300.0
margin_right = 796.0
margin_bottom = 380.0
custom_colors/font_color_disabled = Color( 0.843137, 0.12549, 0.12549, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.85098, 0.917647, 0.0745098, 1 )
custom_colors/font_color_hover = Color( 0.870588, 0.219608, 0.219608, 1 )
custom_colors/font_color_pressed = Color( 0.956863, 0.0705882, 0.0705882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Reiniciar"

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="pontua2" from="Player2" to="." method="_on_Player2_pontua2"]
[connection signal="timeout" from="horacarrorapido" to="." method="_on_horacarrorapido_timeout"]
[connection signal="timeout" from="horacarrodevagar" to="." method="_on_horacarrodevagar_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
